charts/transmission/flood/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flood
spec:
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
        runAsGroup: 1001
        runAsNonRoot: true
        fsGroupChangePolicy: OnRootMismatch
      containers:
      - name: flood
        image: jesec/flood:4.16.2
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
          readOnly: true
        - name: medias
          mountPath: /medias
          readOnly: true
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: flood-config
      - name: medias
        persistentVolumeClaim:
          claimName: medias
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads
