charts/transmission/flood/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flood
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.cilium.io/force-https: "true"
spec:
  ingressClassName: cilium
  rules:
  - host: flood.sdg.moe
    http:
      paths:
      - backend:
          service:
            name: flood
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - flood.sdg.moe
    secretName: flood-cert
